--- a/package.json
+++ b/package.json
@@ -9,31 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@langchain/community": "^0.2.17",
-    "@langchain/openai": "^0.2.5",
-    "@radix-ui/react-dialog": "^1.1.1",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
-    "axios": "^1.7.2",
-    "class-variance-authority": "^0.7.0",
+    "@langchain/community": "^0.3.37",
+    "@langchain/core": "^0.3.43",
+    "@langchain/groq": "^0.2.0",
+    "@langchain/openai": "^0.4.8",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-slot": "^1.1.2",
+    "axios": "^1.8.4",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "composio-core": "^0.1.4",
-    "dotenv": "^16.4.5",
-    "lucide-react": "^0.400.0",
-    "next": "14.2.4",
-    "react": "^18",
-    "react-dom": "^18",
-    "tailwind-merge": "^2.3.0",
+    "composio-core": "^0.5.31",
+    "dotenv": "^16.4.7",
+    "lucide-react": "^0.483.0",
+    "next": "15.2.3",
+    "react": "^19",
+    "react-dom": "^19",
+    "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
-    "uuid": "^10.0.0"
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.4",
+    "@tailwindcss/postcss7-compat": "^2.2.17",
+    "@types/node": "^22.13.13",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^9",
+    "eslint-config-next": "15.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
